# crispy-octo-palm-tree

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: action.yml
scripts/: build-gui.sh  build.sh  run.sh
src/: main.cpp  src.cmake
